# RealtyAI_Infosys_Internship_Aug2025

./: App.py  BASELINE.ipynb  Bagging.ipynb  Bagging_model.ipynb  DataSetExploration_py.ipynb  DataSet_Exploration.ipynb  Data_Exploration.ipynb  Data_Preprocessing.ipynb  EDA FILE  EDA.ipynb  EDA_on_time_series.ipynb  EDA_price_prediction.ipynb  FinalDataSet_Infosys_py.ipynb  Final_Model_pynb.ipynb  House Price prediction model.ipynb  Housing Real Estate Dataset from Indian cities.ipynb  INDIAN REALESTATE.ipynb  Indian cites RealEstate.ipynb  Inferencing_on_unseen_data.ipynb  Infosys_Internship_Program (1).ipynb  Infosys_Internship_Program.ipynb  Infosys_Springboard.ipynb  Infosys_Springboard_EDA(1).ipynb  Infosys_Springboard_EDA.ipynb  Infosys_Springboard_model.ipynb  LINEAR REGRESSION.ipynb  LinearRegression.ipynb  Model_Selection.ipynb  Notebook_A.ipynb  Pipeline.ipynb  Predictions_on_unseen_data.ipynb  Price_Prediction.ipynb  Prophet Training.ipynb  Prophet_model.ipynb  README.md  README_RealtyAI.md  Readme.md  Real estate.ipynb  RealEstate.ipynb  RealEstate_Exploration.ipynb  (+37 more)
.ipynb_checkpoints/: House Price prediction model-checkpoint.ipynb  House_Price_prediction_model_adaboost-checkpoint.ipynb  base_model_results-checkpoint.json
FINAL PROJECT/: README.md  available_regions.joblib  forecasting_utils.py  pipeline.pkl  predict.py  prophet_models_all_regions.joblib  requirements.txt  streamlit_app.py  train.py  train_forecasting_models.py
House_Price_Prediction_Time_Series_Forecasting/: Time_Series_Forecasting_Price_Prediction.ipynb
WEEK1/: DATA_EXPLORATION.ipynb  (+4 more)
(+30 files in other folders)
