[project]
name = "real-estate-backend"
version = "0.1.0"
description = "FastAPI backend for Real Estate AI predictions and forecasting"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "joblib>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn==1.7.1",
    "prophet>=1.1.0",
    "plotly>=5.0.0"
]
requires-python = ">=3.10"
readme = "README.md"